fixed the footer, and took away lorem
Jag fixade hela footer delen av sidan, samt så tog jag bort all lorem ipsum

--- a/index.html
+++ b/index.html
@@ -28,20 +28,29 @@
         <div>
             <h2>About the Air Nation</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni non voluptates commodi fuga accusamus
-                pariatur odit vitae, aperiam quaerat consequuntur voluptatum animi, necessitatibus labore deleniti
-                repudiandae, ad quod vero eveniet.
-                Ea architecto repellendus, sint sit nesciunt inventore et adipisci quisquam nisi voluptatum modi non
-                atque voluptatibus, quae similique repudiandae illo delectus odio consequatur nihil incidunt sed
-                dignissimos beatae. Neque, maxime.
+                Air Nomads is the collective term for the monastic order of men and women who practice the discipline of
+                airbending and the pacifistic ethics of their theocratic society. One of the four nations, the Air
+                Nomads were wanderers by definition, but had four air temples, one located at each corner of the globe,
+                found atop mountain ranges and under cliffs, in the northern Earth Kingdom and on three remote islands,
+                all of which were hard for outsiders to reach. Unlike the other nations, those born to the Air Nomads
+                were, without any seen exception, all benders due to the high level of spirituality of their people.
             </p>
             <h2>Air Bending</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam architecto suscipit voluptatum tenetur
-                dolorum. Voluptatum ducimus aperiam quam ratione laborum, praesentium eligendi omnis id eveniet in
-                distinctio quo commodi tempora?
+            <p>
+                Airbending, one of the four elemental bending arts, is the aerokinetic ability to control and manipulate
+                air. The peaceful Air Nomads utilized this type of bending in their everyday lives.
+                Air is the element of freedom. The Air Nomads detached themselves from worldly problems and concerns;
+                finding peace and freedom was the key to solving their difficulties in life. Airbenders continually
+                sought spiritual enlightenment, and, as a result, all children born into the Air Nomads were benders.
+                The first airbenders learned their art from the flying bison.
             </p>
         </div>
     </div>
+    <footer>
+        <div id="footer-text">
+            @ Airbending Nation 2022
+        </div>
+    </footer>
 </body>
 
 </html>
